--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <script type="text/javascript">
 	$(document).ready(function(){
 		$("body").on('click touchstart', function(){
-			window.location = "/camarlengo/inicio/";
+			window.location = "/Website/inicio/";
 		});
 		$("#fondo").click(function(){
-			window.location = "/camarlengo/inicio/";
+			window.location = "/Website/inicio/";
 		})
 	})
 </script>
